--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="keywords" content="">
-<title>Ben Plotkin-Swing</title> 
-<link rel="stylesheet" type="text/css" href="css/style.css" title="Plotkin-Swing Stylesheet" />
+<title>Circular Menu Template</title> 
+<link rel="stylesheet" type="text/css" href="css/style.css" title="Style Sheet" />
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type='text/javascript' src='myScripts/circlelink.js'></script> 
-<!--<link rel="icon" type="image/png" href="myImages/favIconSmall.png"/>-->
 
 </head>
 <body>
@@ -26,7 +25,7 @@
 						d="	M 0 0
 							L 0 -1 
 							A 1 1, 0, 0 0, -0.86666666667 0.50"  	
-						fill="green" stroke="none"  opacity="1"
+						fill="chartreuse" stroke="none"  opacity="1"
 				/>
 				<path class="region" id="2"
 						d="	M 0 0
